// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly 1`] = `
Array [
  .c0 {
  fill: none;
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<path
    className="line-path c0"
    d="M0"
  />,
  .c0 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<g
    className="line-dot-group"
  >
    <circle
      className="line-dot c0"
      cx={NaN}
      r={5}
    />
  </g>,
]
`;

exports[`render correctly width dates 1`] = `
Array [
  .c0 {
  fill: none;
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<path
    className="line-path c0"
    d="M0"
  />,
  .c0 {
  cursor: pointer;
  fill: rgb(255,255,255);
  stroke: rgb(0,0,0);
  stroke-width: 3;
}

<g
    className="line-dot-group"
  >
    <circle
      className="line-dot c0"
      r={5}
    />
  </g>,
]
`;
